# mcp_godot_rag

./: .env.example  .gitignore  LICENSE  README.md  chunker.py  convert_rst2md.py  download_godot_docs.py  main.py  main_with_api.py  pyproject.toml  test.md  test.py  vectorizer.py  vectorizer_api.py
